--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@
 # https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
 # https://learnxinyminutes.com/docs/yaml/
 
-title: fastpages
-description: An easy to use blogging platform with support for Jupyter Notebooks.
+title: steve hart | data science portfolio and blog
+description: Portfolio and blog of Steve Hart, Data Scientist and experienced project leader.
 github_username: stevenrhart
 # you can comment the below line out if your repo name is not different than your baseurl
 github_repo: "fastpages_site"
@@ -34,16 +34,18 @@ url: "https://stevenrhart.github.io" # the base hostname & protocol for your sit
 #
 # 3. You must replace the parameter `baseurl` in _action_files/settings.ini with the same value as you set here but WITHOUT QUOTES.
 #
-baseurl: "/fastpages_site" # the subpath of your site, e.g. "/blog".
+baseurl: "" # the subpath of your site, e.g. "/blog".
 
 # Github and twitter are optional:
 minima:
   social_links:
-    twitter: fastdotai
-    github: fastai
+    #twitter: fastdotai
+    github: stevenrhart
+    linkedin: stevenrhart1
+    email: stevenrhart@gmail.com
 
 # Set this to true to get LaTeX math equation support
-use_math: 
+use_math: true 
 
 # Set this to true to display the summary of your blog post under your title on the Home page.
 show_description: true
@@ -55,7 +57,7 @@ show_image: false
 show_tags: true
 
 # Add your Google Analytics ID here if you have one and want to use it
-google_analytics: 
+google_analytics: UA-172120262-1
 
 exclude:
   - docker-compose.yml
@@ -69,8 +71,8 @@ include:
 # This specifies what badges are turned on by default for notebook posts.
 default_badges:
   github: true
-  binder: true
-  colab: true
+  binder: false
+  colab: false
 
 # Escape HTML in post descriptions
 html_escape:
