--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
 # https://learnxinyminutes.com/docs/yaml/
 
-title: steve hart | data science portfolio and blog
+title: steve hart
 description: Portfolio and blog of Steve Hart, Data Scientist and experienced project leader.
 github_username: stevenrhart
 # you can comment the below line out if your repo name is not different than your baseurl
